# dragonglass

./: .gitignore  Cargo.toml  README.md  TODO.md  clippy.toml  rustfmt.toml  settings.toml
.github/workflows/: quickstart.yml
app/: Cargo.toml
apps/editor/: Cargo.toml
apps/editor/src/: camera.rs  editor.rs  main.rs  widgets.rs
apps/game/: Cargo.toml
apps/game/src/: main.rs
assets/models/: arena.glb  arena2.glb  blocklevel.glb  level.glb  player.glb  room.glb  segmented_room.glb
assets/skyboxes/: night.hdr
crates/dragonglass/: Cargo.toml  build.rs
crates/dragonglass-adapters/: Cargo.toml  README.md
crates/dragonglass_app/: Cargo.toml
crates/dragonglass_app/src/: app.rs  camera.rs  gui.rs  input.rs  lib.rs  logger.rs  main.rs  resources.rs  state.rs  system.rs  universe.rs
crates/dragonglass_app/src/resources/: input.rs  system.rs
crates/dragonglass_app/src/state/: input.rs  system.rs
crates/dragonglass_audio/: Cargo.toml
crates/dragonglass_config/: Cargo.toml
crates/dragonglass_deps/: Cargo.toml
crates/dragonglass_deps/src/: lib.rs
crates/dragonglass_gui/: Cargo.toml
crates/dragonglass_input/: Cargo.toml
crates/dragonglass_opengl/: Cargo.toml
crates/dragonglass_physics/: Cargo.toml
crates/dragonglass_render/: Cargo.toml  build.rs
crates/dragonglass_render/src/: lib.rs  opengl.rs  render.rs  renderer.rs  vulkan.rs  world.rs
crates/dragonglass_render/src/opengl/: device.rs  world.rs
crates/dragonglass_render/src/shaders/: shader.wgsl
crates/dragonglass_render/src/vulkan/: backend.rs  cube.rs  device.rs  gui.rs  pbr.rs  render.rs  renderer.rs  scene.rs  world.rs
crates/dragonglass_render/src/vulkan/backend/: device.rs  scene.rs
crates/dragonglass_render/src/vulkan/core/: adapters.rs  context.rs  frame.rs  rendergraph.rs
crates/dragonglass_render/src/vulkan/core/adapters/: render.rs
crates/dragonglass_render/src/vulkan/core/context/: debug.rs  instance.rs  physical_device.rs
crates/dragonglass_render/src/vulkan/core/resources/: buffer.rs  image.rs
crates/dragonglass_render/src/vulkan/pbr/: brdflut.rs  environment.rs  hdr.rs  irradiance.rs  prefilter.rs
crates/dragonglass_render/src/vulkan/pipelines/: cube.rs  fullscreen.rs  gui.rs
crates/dragonglass_render/src/vulkan/render/: cube.rs  fullscreen.rs  gui.rs  skybox.rs  world.rs
crates/dragonglass_render/src/world/: render.rs  texture.rs  uniform.rs  uniforms.rs
crates/dragonglass_vulkan/: Cargo.toml  build.rs
crates/dragonglass_vulkan/src/: geometry.rs  lib.rs  render.rs
crates/dragonglass_vulkan/src/core/: context.rs  frame.rs  rendergraph.rs  resources.rs  swapchain.rs
crates/dragonglass_vulkan/src/core/adapters/: command.rs  descriptor.rs  pipeline.rs  render.rs  sync.rs
crates/dragonglass_vulkan/src/core/context/: debug.rs  device.rs  instance.rs  physical_device.rs
crates/dragonglass_vulkan/src/core/resources/: buffer.rs  image.rs  shader.rs
crates/dragonglass_vulkan/src/geometry/: cube.rs  shapes.rs
crates/dragonglass_vulkan/src/pbr/: brdflut.rs  environment.rs  hdr.rs  irradiance.rs  prefilter.rs
crates/dragonglass_vulkan/src/render/: cube.rs  fullscreen.rs  gui.rs  shadow.rs  shapes.rs  skybox.rs
crates/dragonglass_world/: Cargo.toml
crates/dragonglass_world/src/: animation.rs  camera.rs  gltf.rs  lib.rs  physics.rs  registry.rs  scenegraph.rs  texture.rs  transform.rs  world.rs
docs/: index.md
dragonglass/: Cargo.toml  build.rs
dragonglass-app/: Cargo.toml
dragonglass-context/: Cargo.toml
dragonglass-physics/: Cargo.toml
dragonglass-render/: Cargo.toml
dragonglass-scene/: Cargo.toml
dragonglass-world/: Cargo.toml
dragonglass/shaders/postprocessing/: fullscreen_triangle.vert.glsl  postprocess.frag.glsl  postprocess.frag.spv
dragonglass/shaders/triangle/: triangle.frag.spv  triangle.vert.glsl  triangle.vert.spv
dragonglass/src/: asset.rs  asset_rendering.rs  backend.rs  command_pool.rs  context.rs  core.rs  cube.rs  device.rs  forward.rs  frame.rs  gltf.rs  gltf_rendering.rs  gui.rs  hdr.rs  lib.rs  object.rs  pbr.rs  pipeline.rs  render.rs  renderer.rs  rendergraph.rs  resource.rs  scene.rs  shader.rs  skybox.rs  swapchain.rs  sync.rs  triangle.rs  vulkan.rs  world.rs
dragonglass/src/adapters/: command.rs  descriptor.rs  pipeline.rs  render.rs  sync.rs
dragonglass/src/context/: README.md  device.rs  instance.rs  logical_device.rs  physical_device.rs
dragonglass/src/core/: context.rs  debug.rs  image.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  rendergraph.rs  surface.rs  swapchain.rs
dragonglass/src/core/adapters/: README.md  command.rs  pipeline.rs  render.rs
dragonglass/src/core/context/: README.md  device.rs  physical_device.rs
dragonglass/src/core/resources/: README.md  buffer.rs  image.rs
dragonglass/src/pbr/: hdr.rs
dragonglass/src/pipelines/: fullscreen.rs
dragonglass/src/render/: buffer.rs  command.rs  descriptor.rs  image.rs  mod.rs  pipeline.rs  renderpass.rs  resource.rs  shader.rs  swapchain.rs
dragonglass/src/resource/: command.rs  sync.rs
dragonglass/src/resources/: README.md  buffer.rs  image.rs  shader.rs
dragonglass/src/vulkan/: cube.rs  pipelines.rs  renderer.rs  scene.rs  skybox.rs  technique.rs  world.rs
dragonglass/src/vulkan/core/: context.rs  frame.rs  rendergraph.rs  swapchain.rs
dragonglass/src/vulkan/core/adapters/: command.rs  descriptor.rs  pipeline.rs  render.rs  sync.rs
dragonglass/src/vulkan/core/context/: device.rs  instance.rs  physical_device.rs
dragonglass/src/vulkan/core/resources/: buffer.rs  image.rs  shader.rs
dragonglass/src/vulkan/pbr/: hdr.rs
dragonglass/src/vulkan/pipelines/: cube.rs  fullscreen.rs  gui.rs
dragonglass/src/world/: asset.rs
editor/: Cargo.toml
examples/: viewer.rs
game/: Cargo.toml
game/src/: main.rs
scene/: Cargo.toml
scene/src/: gltf.rs  lib.rs
shader-compilation/: Cargo.toml
src/: lib.rs
viewer/: Cargo.toml
viewer-vr/: Cargo.toml
viewer-vr/src/: main.rs
viewer/src/: app.rs  camera.rs  gui.rs  input.rs  logger.rs  main.rs  physics.rs  settings.rs  state.rs  system.rs
(+85 files in other folders)
