[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2021"
name = "dragonglass"
version = "0.1.0"

[workspace]
default-members = ["apps/*"]
exclude = ["benches"]
members = ["crates/*", "apps/*"]

[dependencies]
dragonglass_app = {path = "crates/dragonglass_app"}
dragonglass_deps = {path = "crates/dragonglass_deps"}
dragonglass_render = {path = "crates/dragonglass_render"}
dragonglass_world = {path = "crates/dragonglass_world"}
