[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"
name = "dragonglass"
version = "0.1.0"

[workspace]
default-members = ["apps/*"]
exclude = ["benches"]
members = ["crates/*", "apps/*"]

[dependencies]
dragonglass_app = {path = "crates/dragonglass_app"}
dragonglass_gui = {path = "crates/dragonglass_gui"}
dragonglass_input = {path = "crates/dragonglass_input"}
dragonglass_render = {path = "crates/dragonglass_render"}
dragonglass_world = {path = "crates/dragonglass_world"}
