[package]
name = "dragonglass"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
log = "0.4.11"
ash = "0.31.0"
raw-window-handle = "0.3.3"
vk-mem = "0.2.2"

[build-dependencies]
log = "0.4.8"
shader-compilation = { path = "../shader-compilation" }
simplelog = { version = "0.8.0", features = ["termcolor"] }
