[package]
name = "dragonglass"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
ash = "0.31.0"
ash-window = "0.5.0"
anyhow = "1.0.32"
derive_builder = "0.9.0"
log = "0.4.11"
image = "0.23.9"
nalgebra-glm = "0.8.0"
petgraph = "0.5.1"
raw-window-handle = "0.3.3"
vk-mem = "0.2.2"

scene = { path = "../scene" }

[build-dependencies]
log = "0.4.11"
shader-compilation = { path = "../shader-compilation" }
simplelog = { version = "0.8.0", features = ["termcolor"] }

[features]
validation = []
