[package]
name = "game"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.36"
dragonglass = { path = ".." }
hecs = { git = "https://github.com/Ralith/hecs", features = ["serde"] }
imgui = "0.6.1"
log = "0.4.11"
nalgebra = "0.23.2"
nalgebra-glm = "0.9.0"
ncollide3d = "0.26.1"
rapier3d = "0.4.2"
winit = "0.24.0"
