[package]
name = "viewer-vr"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
ash = "0.31"
anyhow = "1.0.34"
ctrlc = "3.1.5"
dragonglass = { path = "../dragonglass" }
dragonglass-scene = { path = "../dragonglass-scene" }
log = "0.4.11"
nalgebra-glm = "0.9.0"
openxr = { version = "0.13.1", features = ["static"] }
simplelog = { version = "0.8.0", features = ["termcolor"] }