[package]
name = "viewer"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
config = "0.10.1"
dragonglass = { path = "../dragonglass" }
image = "0.23.11"
log = "0.4.11"
nalgebra-glm = "0.9.0"
scene = { path = "../scene" }
serde = { version = "1.0.117", features = ["derive"] }
simplelog = { version = "0.8.0", features = ["termcolor"] }
toml = "0.5.7"
winit = "0.23.0"
