[package]
name = "viewer"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"
default-run = "viewer"

[dependencies]
anyhow = "1.0.34"
config = "0.10.1"
dragonglass = { path = "../dragonglass" }
dragonglass-world = { path = "../dragonglass-world" }
image = "0.23.12"
imgui = "0.6.0"
imgui-winit-support = "0.6.0"
log = "0.4.11"
nalgebra-glm = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
simplelog = { version = "0.8.0", features = ["termcolor"] }
toml = "0.5.7"
winit = "0.23.0"
ncollide3d = "0.26.1"
nalgebra = "0.23.2"
