[package]
name = "editor"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"
default-run = "editor"

[dependencies]
anyhow = "1.0.52"
dragonglass = { path = "../.." }
log = "0.4.14"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
nfd = "0.0.4"
winit = "0.26.0"
structopt = "0.3.25"
