[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
default-run = "editor"
edition = "2018"
name = "editor"
version = "0.1.0"

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
dragonglass = {path = "../.."}
hotwatch = "0.4.5"
log = "0.4.14"
nalgebra = "0.25.3"
nalgebra-glm = "0.11.0"
structopt = "0.3.21"
winit = "0.24.0"
