[package]
name = "game"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
dragonglass = { path = "../.." }
imgui = "0.8.0"
log = "0.4.14"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
pollster = "0.2.4"
rapier3d = "0.11.1"
winit = "0.25.0"
