[package]
name = "game"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
dragonglass = { path = "../.." }
log = "0.4.14"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
pollster = "0.2.4"
rapier3d = { version = "0.11.1", features = ["serde-serialize", "wasm-bindgen"] }
winit = "0.26.0"
