[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"
name = "game"
version = "0.1.0"

[dependencies]
anyhow = "1.0.40"
dragonglass = {path = "../.."}
log = "0.4.14"
nalgebra = "0.30.1"
nalgebra-glm = {version = "0.16.0", features = ["serde-serialize"]}
rapier3d = {version = "0.12.0-alpha.0", features = ["serde-serialize", "wasm-bindgen"]}
winit = "0.26.1"
