[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2021"
name = "dragonglass_app"
version = "0.1.0"

[dependencies]
dragonglass_deps = {path = "../dragonglass_deps"}
dragonglass_render = {path = "../dragonglass_render"}
dragonglass_world = {path = "../dragonglass_world"}
