[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"
name = "dragonglass_app"
version = "0.1.0"

[dependencies]
anyhow = "1.0.52"
dragonglass_gui = {path = "../dragonglass_gui"}
dragonglass_render = {path = "../dragonglass_render"}
dragonglass_world = {path = "../dragonglass_world"}
image = "0.23.14"
log = "0.4.14"
nalgebra-glm = { version = "0.16.0", features = ["serde-serialize"] }
serde = { version = "1.0.133", features = ["derive"] }
simplelog = { version = "0.11.2", features = ["termcolor"] }
winit = "0.26.1"
