[package]
edition = "2021"
name = "dragonglass_deps"
version = "0.1.0"

[dependencies]
anyhow = "1.0.40"
bincode = "1.3.3"
bmfont = {version = "0.3.3", features = ["serde"]}
derive_builder = "0.10.0"
glob = "0.3.0"
gltf = {version = "0.15.2", features = ["names", "KHR_lights_punctual", "KHR_materials_unlit"]}
image = "0.23.14"
imgui = "0.7.0"
imgui-winit-support = "0.7.0"
lazy_static = "1.4.0"
legion = "0.4.0"
log = "0.4.14"
nalgebra = "0.26.1"
nalgebra-glm = {version = "0.12.0", features = ["serde-serialize"]}
petgraph = {version = "0.5.1", features = ["serde-1"]}
rapier3d = {version = "0.8.0", features = ["parallel", "serde-serialize"]}
raw-window-handle = "0.3.3"
serde = {version = "1.0.125", features = ["derive"]}
simplelog = {version = "0.10.0", features = ["termcolor"]}
winit = "0.24.0"
