[package]
edition = "2021"
name = "dragonglass_deps"
version = "0.1.0"

[dependencies]
anyhow = "1.0.52"
ash = "0.35.0"
ash-window = "0.9.0"
bincode = "1.3.3"
bmfont = {version = "0.3.3", features = ["serde"]}
derive_builder = "0.10.2"
egui = "0.16.1"
egui_winit_platform = "0.13.0"
env_logger = "0.9.0"
epi = "0.16.0"
glob = "0.3.0"
gltf = {version = "0.16.0", features = ["names", "KHR_lights_punctual", "KHR_materials_unlit"]}
image = "0.23.14"
lazy_static = "1.4.0"
legion = {version = "0.4.0", features = ["wasm-bindgen"]}
log = "0.4.14"
nalgebra = "0.30.1"
nalgebra-glm = {version = "0.16.0", features = ["serde-serialize"]}
petgraph = {version = "0.6.0", features = ["serde-1"]}
rapier3d = {version = "0.12.0-alpha.0", features = ["serde-serialize", "wasm-bindgen"]}
raw-window-handle = "0.3.4"
rfd = "0.6.3"
serde = {version = "1.0.133", features = ["derive"]}
simplelog = {version = "0.11.2", features = ["termcolor"]}
vk-mem = {git = "https://github.com/gwihlidal/vk-mem-rs"}
winit = "0.26.1"
