[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2021"
name = "dragonglass_render"
version = "0.1.0"

[dependencies]
dragonglass_deps = {path = "../dragonglass_deps"}
dragonglass_shader = {path = "../dragonglass_shader"}
dragonglass_vulkan = {path = "../dragonglass_vulkan"}
dragonglass_world = {path = "../dragonglass_world"}

[build-dependencies]
dragonglass_deps = {path = "../dragonglass_deps"}
dragonglass_shader = {path = "../dragonglass_shader"}
