[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"
name = "dragonglass_render"
version = "0.1.0"

[dependencies]
anyhow = "1.0.40"
derive_builder = "0.10.0"
dragonglass_gui = {path = "../dragonglass_gui"}
dragonglass_shader = {path = "../dragonglass_shader"}
dragonglass_vulkan = {path = "../dragonglass_vulkan"}
dragonglass_world = {path = "../dragonglass_world"}
image = "0.23.14"
log = "0.4.14"
nalgebra-glm = {version = "0.16.0", features = ["serde-serialize"]}
petgraph = "0.5.1"
rapier3d = {version = "0.12.0-alpha.0", features = ["serde-serialize", "wasm-bindgen"]}
raw-window-handle = "0.3.3"

[build-dependencies]
dragonglass_shader = {path = "../dragonglass_shader"}
log = "0.4.14"
simplelog = {version = "0.10.0", features = ["termcolor"]}
