[package]
name = "dragonglass_vulkan"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
ash = "0.32.0"
ash-window = "0.6.0"
derive_builder = "0.10.0"
dragonglass_world = { path = "../dragonglass_world" }
image = "0.23.14"
imgui = "0.7.0"
log = "0.4.14"
nalgebra-glm = "0.12.0"
petgraph = "0.5.1"
raw-window-handle = "0.3.3"
shader-compilation = { path = "../shader-compilation" }
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs" }

[build-dependencies]
log = "0.4.14"
shader-compilation = { path = "../shader-compilation" }
simplelog = { version = "0.10.0", features = ["termcolor"] }
