[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2021"
name = "dragonglass_vulkan"
version = "0.1.0"

[dependencies]
derive_builder = "0.10.2"
dragonglass_deps = {path = "../dragonglass_deps"}
dragonglass_shader = {path = "../dragonglass_shader"}
dragonglass_world = {path = "../dragonglass_world"}

[build-dependencies]
dragonglass_deps = {path = "../dragonglass_deps"}
dragonglass_shader = {path = "../dragonglass_shader"}
