[package]
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"
name = "dragonglass_world"
version = "0.1.0"

[dependencies]
anyhow = "1.0.52"
bincode = "1.3.3"
bmfont = { version = "0.3.3", features = ["serde"] }
gltf = { version = "0.16.0", features = ["names", "KHR_lights_punctual", "KHR_materials_unlit"] }
image = "0.23.14"
lazy_static = "1.4.0"
legion = "0.4.0"
log = "0.4.14"
nalgebra = "0.30.1"
nalgebra-glm = { version = "0.16.0", features = ["serde-serialize"] }
petgraph = { version = "0.6.0", features = ["serde-1"] }
rapier3d = { version = "0.12.0-alpha.1", features = ["serde-serialize", "wasm-bindgen"] }
serde = "1.0.133"
